--- a/pom.xml
+++ b/pom.xml
@@ -31,17 +31,21 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.asprise.ocr</groupId>
             <artifactId>java-ocr-api</artifactId>
             <version>15.3.0.3</version>
         </dependency>
 
-
-
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>3.15</version>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
         </dependency>
 
 
